--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -4,44 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_view_results"
     android:layout_width="match_parent"
-    android:background="@color/negative"
     android:layout_height="match_parent"
+    android:background="@color/negative"
     tools:context=".activity.ResultsActivity">
 
     <TextView
-        android:id="@+id/tv_your_status"
+        android:id="@+id/tv_what_to_do_next_instructions"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center"
-        android:text="@string/stay_at_home"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        app:layout_constraintBottom_toTopOf="@+id/tv_what_to_do_next_instructions"
+        android:text="@string/isolate_your_self_for_14_days"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_what_to_do_next_instructions"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
-        android:gravity="center"
-        android:textSize="23sp"
-        android:text="@string/isolate_your_self_for_14_days"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_your_status" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
