--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,14 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="za.co.dubedivine.androidapps.cory.activity.ui.home.HomeFragment"
+        android:name="za.co.dubedivine.androidapps.cory.activity.main.MainFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_main" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="za.co.dubedivine.androidapps.cory.activity.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
-    <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="za.co.dubedivine.androidapps.cory.activity.ui.notifications.NotificationsFragment"
+        android:id="@+id/navigation_information"
+        android:name="za.co.dubedivine.androidapps.cory.activity.information.InformationFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_information_list" />
+
 </navigation>
